# scanii-rust

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: pr.yml  release.yml
examples/: quickstart.rs
src/: client.rs  error.rs  lib.rs  models.rs  multipart.rs  target.rs
tests/: integration.rs
